k8s/pixpos/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pixpos
  labels:
    product: pixpos
    environment: production
