k8s/pixpos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pixpos-api
  namespace: pixpos
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: pixpos-api
